# solana-sniper

./: .gitignore  Cargo.toml  README.md  run-migrations.sh
data/6ogzHhzdrQr9Pgv6hZ2MNze7UrzBMAFyBBWUYp1Fhitx/2024-03-06/whales/: analysis_march6.txt  whale_details.csv
data/8dtiEtPqkHJgeN5fy7iVg2gVAQMMzdSjjzvdjkjbM32j/2024-03-06/whales/: whale_details.csv
data/A3eME5CetyZPBoWbRUwY3tSe25S6tb18ba9ZPbWk9eFJ/2024-03-06/whales/: whale_details.csv
data/A6rSPi9JmJgVkW6BatsA6MjFYLseizPM2Fnt92coFjf4/2024-03-08/whales/: whale_details.csv
data/AZsHEMXd36Bj1EMNXhowJajpUXzrKcK57wW4ZGXVa7yR/2024-03-06/whales/: whale_details.csv
data/CY2E69dSG9vBsMoaXDvYmMDSMEP4SZtRY1rqVQ9tkNDu/2024-03-06/whales/: whale_details.csv
data/EEfuxw7vmtoqG3EWzJAo6Txb5z1ci5wvMw2wrHwdQSq1/: analysis_march6.tx
data/EEfuxw7vmtoqG3EWzJAo6Txb5z1ci5wvMw2wrHwdQSq1/2024-03-06/whales/: whale_details.csv
data/JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN/2024-03-06/whales/: whale_details.csv
data/JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN/2024-03-07/whales/: whale_details.csv
migrations/: init-db.sql
migrations/2024-02-09-230011_01_schema_v1/: down.sql  up.sql
public/birdeye/: amm_providers.json
public/idls/: jupiter_aggregator_idl.json
src/: main.rs  schema.rs  strategy.md
src/db/: db_session_manager.rs  mod.rs
src/decoder/: mod.rs  tx_decoder.rs
src/http/: base_http_client.rs  http_client_error.rs  mod.rs  moralis_http_client.rs
src/models/: mod.rs
src/models/moralis/: mod.rs  token_price_response.rs
src/models/solana/: LOW.md  mod.rs  solana_account_notification.rs  solana_block_notification.rs  solana_event_types.rs  solana_logs_notification.rs  solana_program_notification.rs  solana_transaction.rs
src/models/solana/alchemy/: get_program_accounts.rs  get_token_accounts_by_owner.rs  mod.rs
src/scraper/: birdeye_scraper.rs  mod.rs
src/server/: http_server.rs  mod.rs  ws_server.rs
src/server/endpoints/: accounts.rs  holders.rs  mod.rs  new_spls.rs  signatures_for_address.rs  token_accounts_by_owner.rs  transaction.rs  transactions.rs  whales.rs
src/server/endpoints/birdeye/: mod.rs  token_prices.rs
src/subscriber/: consume_stream.rs  mod.rs  websocket_event_types.rs  websocket_subscriber.rs
src/trackers/: mod.rs
src/trackers/binance/: depth_tracker.rs  mod.rs  rsi_tracker.rs
src/trackers/raydium/: mod.rs  new_token_tracker.rs
src/util/: event_filters.rs  mod.rs  serde_helper.rs
